@@ -20,6 +20,8 @@ package org.apache.ofbiz.base.util;
 
 import java.io.File;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
@@ -52,7 +54,8 @@ public final class UtilURL {
      * <code>null</code> if the resource is not found.
      * <p>This method uses various ways to locate the resource, and in all
      * cases it tests to see if the resource exists - so it
-     * is very inefficient.</p>
+     * is very inefficient.
+     *
      * @param resourceName
      * @return
      */
@@ -72,18 +75,21 @@ public final class UtilURL {
      * <code>null</code> if the resource is not found.
      * <p>This method uses various ways to locate the resource, and in all
      * cases it tests to see if the resource exists - so it
-     * is very inefficient.</p>
+     * is very inefficient.
+     *
      * @param resourceName
      * @param loader
      * @return
      */
     public static URL fromResource(String resourceName, ClassLoader loader) {
         URL url = URL_MAP.get(resourceName);
+        URI uri;
         if (url != null) {
             try {
-                return new URL(url.toString());
-            } catch (MalformedURLException e) {
-                Debug.logWarning(e, "Exception thrown while copying URL: ", MODULE);
+                uri = new URI(url.toString());
+                url = uri.toURL();
+            } catch (IllegalArgumentException | URISyntaxException | MalformedURLException e) {
+                Debug.logWarning(e, "Exception thrown while copying URL", MODULE);
             }
         }
         if (loader == null) {
@@ -132,7 +138,7 @@ public final class UtilURL {
             if (file.exists()) {
                 url = file.toURI().toURL();
             }
-        } catch (java.net.MalformedURLException e) {
+        } catch (MalformedURLException e) {
             Debug.logError(e, "unable to retrieve URL for file: " + filename, MODULE);
         }
         return url;
@@ -140,15 +146,17 @@ public final class UtilURL {
 
     public static URL fromUrlString(String urlString) {
         URL url = null;
+        URI uri;
         try {
-            url = new URL(urlString);
-        } catch (MalformedURLException e) {
-            // We purposely don't want to do anything here
+            uri = new URI(urlString);
+            url = uri.toURL();
+        } catch (IllegalArgumentException | URISyntaxException | MalformedURLException e) {
+            // We purposely don't want to do anything here.
         }
         return url;
     }
 
-    private static URL fromOfbizHomePath(String filename) {
+    public static URL fromOfbizHomePath(String filename) {
         String ofbizHome = System.getProperty("ofbiz.home");
         if (ofbizHome == null) {
             Debug.logWarning("No ofbiz.home property set in environment", MODULE);
